# synapi

./: .gitignore  .gitmodules  CMakeLists.txt  FLOW  hl2sdk  mmsource
api/: .#synapi.c  CMakeLists.txt  synapi.c  synapi.h  synapi_flymake.h
cmake/: ConfigureBuild.cmake  Dependencies.cmake
cmake/utils/: FindPkgMacros.cmake  GameSynConfigTargets.cmake
samples/: CMakeLists.txt
samples/hello/: CMakeLists.txt
samples/hello/include/: hello_application.h  prereq.h
samples/hello/src/: hello_application.cpp  main.cpp
samples/sourcemod/: Makefile  extension.cpp  extension.h  synapi.inc
samples/sourcemod/sdk/: smsdk_config.h
samples/test/: CMakeLists.txt  main.c
sourcemod/.hg/: branchheads.cache  dirstate  hgrc  tags.cache  undo.desc
sourcemod/.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i  fncache  undo
sourcemod/.hg/store/data/: _a_m_build_script.i  _n_o_t_i_c_e.txt.i  _t_o_d_o.txt.i  changelog.txt.i  configure.py.i  modules.versions.i  product.version.i  pushbuild.txt.i  ~2ehgignore.i  ~2ehgtags.i
sourcemod/.hg/store/data/compiler-init/: amx.h.i  amxdbg.h.i  libpawnc.c.i  libpawnc.rc.i  lstring.c.i  lstring.h.i  memfile.c.i  memfile.h.i  osdefs.h.i  pawn.ico.i  pawncc.c.i  sc.h.i  sc1.c.i  sc2.c.i  sc3.c.i  sc4.c.i  sc5.c.i  sc5.scp.i  sc6.c.i  sc7.c.i  sc7.scp.i  scexpand.c.i  sci18n.c.i  sclist.c.i  scmemfil.c.i  scstate.c.i  scvars.c.i  sp__file.h.i  spcomp.sln.i  spcomp.vcproj.i  svnrev.h.i
sourcemod/.hg/store/data/compiler-init/compiler-init/: amx.h.i  amxdbg.h.i  libpawnc.c.i  libpawnc.rc.i  lstring.c.i  lstring.h.i  memfile.c.i  memfile.h.i  osdefs.h.i  pawn.ico.i  pawncc.c.i  sc.h.i  sc1.c.i  sc2.c.i  sc3.c.i  sc4.c.i  (+14 more)
sourcemod/.hg/store/data/configs/: admin__groups.cfg.i  admin__levels.cfg.i  admin__overrides.cfg.i  adminmenu__cfgs.txt.i  adminmenu__custom.txt.i  adminmenu__grouping.txt.i  adminmenu__maplist.ini.i  adminmenu__sorting.txt.i  admins.cfg.i  admins__groups.cfg.i  admins__levels.cfg.i  admins__simple.cfg.i  admins__simple.ini.i  core.cfg.i  databases.cfg.i  languages.cfg.i  maplists.cfg.i  menu__configs.cfg.i  menu__maplist.ini.i  permissions.cfg.i  plugin__settings.cfg.i
sourcemod/.hg/store/data/core/: _a_d_t_factory.cpp.i  _a_d_t_factory.h.i  _a_m_builder.i  _admin_cache.cpp.i  _admin_cache.h.i  _c_con_cmd_manager.cpp.i  _c_con_cmd_manager.h.i  _c_con_var_manager.cpp.i  _c_con_var_manager.h.i  _c_data_pack.cpp.i  _c_data_pack.h.i  _c_dbg_reporter.cpp.i  _c_dbg_reporter.h.i  _c_game_configs.cpp.i  _c_game_configs.h.i  _c_half_life2.cpp.i  _c_half_life2.h.i  _c_logger.cpp.i  _c_logger.h.i  _c_msg_id_pool.h.i  _c_msg_listener_wrapper.h.i  _c_player.cpp.i  _c_player.h.i  _c_player_manager.cpp.i  _c_player_manager.h.i  _c_text_parsers.cpp.i  _c_text_parsers.h.i  _c_timer_sys.cpp.i  _c_timer_sys.h.i  _c_translator.cpp.i  _c_translator.h.i  _c_user_messages.cpp.i  _c_user_messages.h.i  _cell_array.h.i  _cell_recipient_filter.h.i  _chat_triggers.cpp.i  _chat_triggers.h.i  _con_cmd_manager.cpp.i  _con_cmd_manager.h.i  _con_command_base_iterator.h.i  (+152 more)
sourcemod/.hg/store/data/gamedata/: core.games.txt.i  sdktools.games.ep2.txt.i  sdktools.games.l4d.txt.i  sdktools.games.txt.i  sm-cstrike.games.txt.i  sm-tf2.games.txt.i  structs.gamedata.txt.i
sourcemod/.hg/store/data/loader/: _a_m_builder.i  _makefile.i  loader.cpp.i  svn__version.h.i  svn__version.tpl.i  version.rc.i
sourcemod/.hg/store/data/plugins/: _a_m_builder.i  admin-auth.sp.i  admin-base.sma.i  admin-base.sp.i  admin-sql-prefetch.sp.i  admin-sql-threaded.sp.i  adminhelp.sp.i  adminmenu.sp.i  antiflood.sp.i  basebans.sp.i  basechat.sp.i  basecomm.sp.i  basecommands.sp.i  basefuncommands.sp.i  basefunvotes.sp.i  basetriggers.sp.i  basevotes.sp.i  clientprefs.sp.i  compile.exe.i  compile.sh.i  funcommands.sp.i  funvotes.sp.i  mapchooser.sp.i  mapmanager.sp.i  nextmap.sp.i  nominations.sp.i  playercommands.sp.i  randomcycle.sp.i  reservedslots.sp.i  rockthevote.sp.i  slapslay.sp.i  sounds.sp.i  spcomp.exe.d  spcomp.exe.i  sql-admin-manager.sp.i  test.sma.i
sourcemod/.hg/store/data/public/: _i_a_d_t_factory.h.i  _i_admin_system.h.i  _i_d_b_driver.h.i  _i_data_pack.h.i  _i_extension_sys.h.i  _i_forward_sys.h.i  _i_game_configs.h.i  _i_game_helpers.h.i  _i_handle_sys.h.i  _i_library_sys.h.i  _i_memory_utils.h.i  _i_menu_manager.h.i  _i_native_invoker.h.i  _i_player_helpers.h.i  _i_plugin_function.h.i  _i_plugin_sys.h.i  _i_root_console_menu.h.i  _i_share_sys.h.i  _i_source_mod.h.i  _i_text_parsers.h.i  _i_threader.h.i  _i_timer_system.h.i  _i_translator.h.i  _i_user_messages.h.i  compat__wrappers.h.i  metamod__wrappers.h.i  sm__platform.h.i  sm__trie__tpl.h.i  sourcemod__version.h.i
sourcemod/.hg/store/data/tools/: versionchanger.pl.i
sourcemod/.hg/store/data/translations/: adminhelp.phrases.txt.i  adminmenu.phrases.txt.i  antiflood.phrases.txt.i  basebans.phrases.txt.i  basecomm.phrases.txt.i  basefuncommands.phrases.txt.i  basefunvotes.phrases.txt.i  basetriggers.phrases.txt.i  basevotes.phrases.txt.i  clientprefs.phrases.txt.i  common.cfg.i  common.phrases.txt.i  core.cfg.i  core.phrases.txt.i  funcommands.phrases.txt.i  funvotes.phrases.txt.i  mapchooser.phrases.txt.i  nextmap.phrases.txt.i  nominations.phrases.txt.i  playercommands.phrases.txt.i  plugin.adminhelp.txt.i  plugin.antiflood.cfg.i  plugin.antiflood.txt.i  plugin.basecommands.cfg.i  plugin.basecommands.txt.i  plugin.basetriggers.txt.i  plugin.nextmap.txt.i  plugin.playercommands.txt.i  plugin.reservedslots.cfg.i  plugin.reservedslots.txt.i  reservedslots.phrases.txt.i  rockthevote.phrases.txt.i  slapslay.phrases.txt.i  sounds.phrases.txt.i  sqladmins.phrases.txt.i
sourcemod/extensions/bintools/: CallWrapper.h
sourcemod/public/synapi/: Makefile  extension.cpp  extension.h  global_chat.sp  synapi.inc  synapi.sp
sourcemod/public/synapi/sourcemod/: Makefile  extension.cpp  extension.h  synapi.inc
synapi/: CMakeLists.txt
synapi/api/: synapi.c  synapi.h
synapi/cmake/: Dependencies.cmake
synapi/cmake/utils/: MacroLogFeature.cmake  SynAPIConfigTargets.cmake
synapi/samples/: CMakeLists.txt
(+2674 files in other folders)
